# raytrace

./: .gitignore  CMakeLists.txt
include/: canvas.h  maybe.h  sdlcanvas.h
include/geometry/: cull.h  geometry.h  matrix.h  plane.h  transform.h  translate.h  vector.h
include/raytrace/: material.h
src/: CMakeLists.txt  sdlcanvas.cpp
src/geometry/: CMakeLists.txt  cull.cpp  matrix.cpp  plane.cpp  transform.cpp  vector.cpp
test/: CMakeLists.txt  TestCase  maybeTest.cpp  testing.h
test/geometry/: CMakeLists.txt  common.cpp  common.h  geomtest.cpp  geomtest.h  matrixTest.cpp  planeTest.cpp  vectorTest.cpp
